--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -9,8 +9,8 @@ python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
-pytest-watch = "^4.2.0"
-black = "^20.8b1"
+poetry = "^1.1.6"
+
 
 [build-system]
 requires = ["poetry>=0.12"]
